# mist-os

./: .clang-format  .clang-tidy  .cursorignore  .gitignore  .gitmodules  .gn  .jiri_manifest  AUTHORS  BUILD.gn  GEMINI.md  LICENSE  OWNERS  OWNERS.fuchsia  README.md  bitbucket-pipelines.yml  fuchsia.code-workspace  makefile  mist-os.code-workspace  mist-os.linux.code-workspace  mist-os.mac.code-workspace  pyproject.toml  pyrightconfig.json  rustfmt.toml  shac.textproto
boards/: BUILD.bazel  BUILD.gn  arm64.gni  qemu-arm64.gni  riscv64.gni  vim3-devicetree.gni  vim3-reduced-perf-variation.gni  vim3.gni  x64-reduced-perf-variation.gni  x64.gni
boards/arm64/: BUILD.gn
boards/common/: arm64-common.gni  riscv64-common.gni  x64-common.gni
boards/emac/: BUILD.bazel
boards/emulation/virtio/: BUILD.gn
boards/kernel_cmdline/: BUILD.gn
boards/partitions/: BUILD.gn
boards/partitions/vim3/: BUILD.bazel  BUILD.gn
boards/pkvm/: BUILD.bazel  BUILD.gn
boards/qemu-arm64/: BUILD.gn
boards/riscv64/: BUILD.gn
boards/vim3/: BUILD.bazel  BUILD.gn
boards/x64/: BUILD.bazel  BUILD.gn
bundles/assembly/: BUILD.gn  platform_aib_names.bzl  platform_aibs.gni  rust_libstd.gni
bundles/assembly/scrutiny/: BUILD.gn
bundles/boot_tests/: BUILD.gn
bundles/kitchen_sink/: BUILD.gn
bundles/tools/: BUILD.gn
bundles/tools/shac/: BUILD.gn
examples/diagnostics/: BUILD.gn
examples/diagnostics/workshop/: BUILD.gn  profile_reader.cc  profile_writer.cc
examples/drivers/: BUILD.gn  README.md
examples/drivers/metadata/: BUILD.gn  README.md  fuchsia.examples.metadata.bind
examples/drivers/power/: BUILD.gn
examples/drivers/skeleton/: BUILD.gn
examples/drivers/template/: BUILD.bazel  BUILD.gn  template_driver.cc
examples/drivers/transport/: BUILD.gn
products/: BUILD.gn  bringup.gni  bringup_with_tests.gni  core.gni  core_with_netstack3.gni  core_with_storage_host.gni  fuchsia.gni  microfuchsia_eng.gni  minimal.gni  terminal.gni  terminal_with_netstack2.gni  workbench_eng.gni
products/bringup/: BUILD.gn
products/common/: core_size_limits.gni
products/core/: BUILD.gn
products/kernel_cmdline/: BUILD.gn
products/microfuchsia/: BUILD.bazel  BUILD.gn  product_bundles.gni
products/minimal/: BUILD.bazel  BUILD.gn  minimal.bzl  product_bundles.gni
products/terminal/: BUILD.bazel  BUILD.gn  cache_packages.gni  product_bundles.gni
products/tests/: BUILD.gn
products/workbench/: BUILD.bazel  BUILD.gn  platform_config.bzl  product_bundles.gni
products/workbench/workbench_session/: BUILD.gn
products/zedboot/: BUILD.bazel  BUILD.gn
sdk/: BUILD.gn  OWNERS  config.gni  generate_idk_targets.gni  idk_contents.gni  idk_rules.gni  version_history.json
sdk/banjo/ddk.hw.physiter/: BUILD.gn
sdk/banjo/fuchsia.hardware.audio/: audio.fidl
sdk/banjo/fuchsia.hardware.audiotypes/: audio.fidl
sdk/banjo/fuchsia.hardware.badblock/: bad-block.fidl
sdk/banjo/fuchsia.hardware.block.partition/: partition.fidl
sdk/banjo/fuchsia.hardware.block.volume/: volume.fidl
sdk/banjo/fuchsia.hardware.bt.hci/: bt-hci.fidl
sdk/banjo/fuchsia.hardware.bt.vendor/: bt-vendor.fidl
sdk/banjo/fuchsia.hardware.camera/: camera.fidl
sdk/banjo/fuchsia.hardware.camera.sensor/: camera-sensor.fidl
sdk/banjo/fuchsia.hardware.camerahwaccel/: camerahwaccel.fidl
sdk/banjo/fuchsia.hardware.clockimpl/: clock-impl.fidl
sdk/banjo/fuchsia.hardware.display.controller/: BUILD.gn  display-controller.fidl
sdk/banjo/fuchsia.hardware.dsiimpl/: dsiimpl.fidl
sdk/banjo/fuchsia.hardware.ethernet/: BUILD.gn  ethernet.fidl
sdk/banjo/fuchsia.hardware.ethernet.board/: ethernet-board.fidl
sdk/banjo/fuchsia.hardware.ethernet.mac/: ethernet-mac.fidl
sdk/banjo/fuchsia.hardware.gdc/: gdc.fidl
sdk/banjo/fuchsia.hardware.ge2d/: ge2d.fidl
sdk/banjo/fuchsia.hardware.i2cimpl/: BUILD.gn  i2c-impl.fidl
sdk/banjo/fuchsia.hardware.intelgpucore/: intel-gpu-core.fidl
sdk/banjo/fuchsia.hardware.intelhda.codec/: intel-hda-codec.fidl
sdk/banjo/fuchsia.hardware.isp/: isp.fidl
sdk/banjo/fuchsia.hardware.mailbox/: mailbox.fidl
sdk/banjo/fuchsia.hardware.mipicsi/: mipicsi.fidl
sdk/banjo/fuchsia.hardware.nand/: nand.fidl
sdk/banjo/fuchsia.hardware.nandinfo/: nand_info.fidl
sdk/banjo/fuchsia.hardware.pciroot/: pciroot.fidl
sdk/banjo/fuchsia.hardware.platform.device/: BUILD.gn  platform-device.fidl
sdk/banjo/fuchsia.hardware.power.sensor/: sensor.fidl
sdk/bundles/: BUILD.gn
sdk/categories/: BUILD.gn  OWNERS  compatibility.gni
sdk/ctf/: BUILD.gn  OWNERS  copy_ctf_artifacts.py  disabled_tests.json  summarize_fidl_methods.py
sdk/docs/: BUILD.gn  OWNERS
sdk/fidl/: BUILD.gn  OWNERS
sdk/firmware/: BUILD.gn
sdk/history/: FROZEN_API_LEVEL_OWNERS  IN_DEVELOPMENT_API_LEVEL_OWNERS  OWNERS  README.md
sdk/lib/: BUILD.gn
sdk/manifests/: OWNERS  fuchsia_idk.manifest  pdk.manifest
sdk/pdk/: BUILD.gn  README.md
sdk/rust/: BUILD.gn
sdk/schema/: README.md
src/: BUILD.gn
src/.cargo/: OWNERS  config.toml
src/camera/: debug.gni
src/chromium/: BUILD.gn  base_deps.gni  generate_chromium_targets.gni
src/cobalt/: BUILD.gn  OWNERS  README.md
src/connectivity/: BUILD.gn
src/developer/: BUILD.gn
src/devices/: BUILD.gn
src/diagnostics/: BUILD.gn  OWNERS
src/factory/: factory_store_provider_config.gni
src/fidl/: OWNERS
src/firmware/: BUILD.gn
src/fonts/: BUILD.bazel  BUILD.gn
src/graphics/: BUILD.gn  OWNERS
src/hwinfo/: BUILD.gn  hwinfo_config.gni
src/intl/: OWNERS
src/lib/: BUILD.gn
src/media/: OWNERS
src/paravirtualization/: BUILD.gn  OWNERS  README.md
src/performance/: BUILD.gn  OWNERS
src/power/: BUILD.gn  OWNERS
src/security/: OWNERS
src/sensors/: BUILD.gn
src/session/: OWNERS
src/settings/: OWNERS
src/starnix/: BUILD.gn  OWNERS
src/starnix_lite/: BUILD.gn  lib
src/storage/: BUILD.gn  OWNERS  open3_migration.gni
src/sys/: BUILD.gn  OWNERS
src/sysmem/: BUILD.gn
src/tee/: BUILD.gn  OWNERS
src/testing/: BUILD.gn  OWNERS
src/tests/: BUILD.gn  OWNERS
src/ui/: BUILD.gn  OWNERS
src/virtualization/: OWNERS
src/zircon/: BUILD.gn
(+27935 files in other folders)
