# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_fuchsia//fuchsia:assembly.bzl", "fuchsia_prebuilt_board_configuration")

package(default_visibility = ["//visibility:public"])

fuchsia_prebuilt_board_configuration(
    name = "x64",
    files = "@gn_targets//boards/x64",
)

fuchsia_prebuilt_board_configuration(
    name = "x64_reduced_perf_variation",
    files = "@gn_targets//boards/x64:reduced_perf_variation",
)

fuchsia_prebuilt_board_configuration(
    name = "arm64",
    files = "@gn_targets//boards/arm64",
)

fuchsia_prebuilt_board_configuration(
    name = "qemu-arm64",
    files = "@gn_targets//boards/qemu-arm64",
)

alias(
    name = "vim3",
    actual = "//boards/vim3",
)

alias(
    name = "vim3_reduced_perf_variation",
    actual = "//boards/vim3:reduced_perf_variation",
)

fuchsia_prebuilt_board_configuration(
    name = "riscv64",
    files = "@gn_targets//boards/riscv64",
)

alias(
    name = "pkvm-x64",
    actual = "//boards/pkvm:x64",
)

alias(
    name = "pkvm-arm64",
    actual = "//boards/pkvm:arm64",
)
