# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#  ________  _________  ________  ________
# |\   ____\|\___   ___\\   __  \|\   __  \
# \ \  \___|\|___ \  \_\ \  \|\  \ \  \|\  \
#  \ \_____  \   \ \  \ \ \  \\\  \ \   ____\
#   \|____|\  \   \ \  \ \ \  \\\  \ \  \___|
#     ____\_\  \   \ \__\ \ \_______\ \__\
#    |\_________\   \|__|  \|_______|\|__|
#    \|_________|
#
# Every new addition to this gni file is an instance of tech-debt that must be
# cleaned up to have a proper platform+product interface. Instead add new items
# to the the board definition in:
#
#   //boards/x64/BUILD.gn

has_board = true
target_cpu = "x64"

board_name = "x64"
board_description = "A generic x64 device"

# Board configuration for Product Assembly
board_configuration_label = "//boards/x64"
bazel_product_bundle_board = "x64"

# Supports both physical and virtual devices.
board_is_emu = true
add_qemu_to_build_archives = true

board_package_labels = [
  "//src/settings/config:qemu_agent_config",
  "//src/settings/config:qemu_input_device_config",
  "//src/settings/config:qemu_light_hardware_config",
  "//src/settings/config:setui_service_external_brightness_flags",
]

# userspace PCI migration flags
# https://fxbug.dev/42108122
platform_enable_user_pci = true

partitions_config_label = "//boards/partitions:x64"

use_vbmeta = true
avb_key =
    "//third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem"
avb_atx_metadata =
    "//third_party/android/platform/external/avb/test/data/atx_metadata.bin"

blobfs_capacity = 10485760000  # 10000 MiB
max_blob_contents_size =
    5216665600  # 4975 MiB. Leaves 50 MiB for the update package.

build_uefi_disk = true
use_gigaboot = true
assembly_generate_fvm_fastboot = true

zircon_a_partition = "zircon-a"
zircon_b_partition = "zircon-b"
zircon_r_partition = "zircon-r"
vbmeta_a_partition = "vbmeta_a"
vbmeta_b_partition = "vbmeta_b"
vbmeta_r_partition = "vbmeta_r"
fvm_partition = "fvm"
fxfs_partition = "fvm"
active_partition = "a"
fastboot_product = "gigaboot"
