# Copyright 2025 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("product_bundles") {
  testonly = true
  deps = [
    "//products/microfuchsia",
    "//products/minimal",
    "//products/terminal",
    "//products/workbench",
  ]
}
