# Copyright 2025 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#
# This product import does not build a specific product, but instead supports
# building a number of different products in the same build directory using a
# multi-product build.
#
# This reduces disk consumption and speeds up builds.
#
# Usage:
#   fx set --auto-dir fuchsia.arm64
#   fx set-main-pb minimal.vim3
#   fx build
#   fx set-main-pb microfuchsia_eng.pkvm-arm64
#   fx build

# Speed up builds by not building a uefi disk.
product_skip_uefi_disk = true

# GN products are not supported in multi-product builds.
use_bazel_images_only = true

# Packages to be published to universe that do not go through assembly.
discoverable_package_labels = [ "//src/developer/debug/debug_agent" ]

# List which product bundles can be built using this build configuration.
product_bundle_labels = [
  "//products/microfuchsia",
  "//products/minimal",
  "//products/terminal",
  "//products/workbench",
]

# Upload these boards to CIPD.
assembly_board_configs = [ "//boards" ]
